--- a/index.html
+++ b/index.html
@@ -9,28 +9,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/positioning.css" />
 </head>
 <body>
     <header>
+    <div class="container">
+        <div class="header-container">
         <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color2">Studio</span></a>
-        <nav>
-        <menu class="navigations">
-            <li><a href="/Agencja">Agencja</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="/Kontakt">Kontakt</a></li>
-        </menu>
-    </nav>
+            <nav>
+                <menu class="navigations">
+                 <li><a href="/Agencja">Agencja</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="/Kontakt">Kontakt</a></li>
+                 </menu>
+            </nav>
+        <div class="contact-container">
         <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="contact" href="tel:+48111111111">+48 111 111 111</a>
-</header>
+        </div>
+        </div>
+    </div>
+    </header>
 <main>
+    <div class="container">
     <section class="first-heading-box" >
 <h1 class="main-heading">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-<button type="button" class="service-button">Zamów usługę</button>
-    </section>
-
-<section>
+<div class="service">
+<button type="button" class="service-button">Zamów usługe</button>
+</div>
+</section>
+    </div>
+<div class="container">
+<section class="lorem-index">
 <ul class="lorem-ipsum" >
     <li><b>LOREM IPSUM</b>
     <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</span></p></li>
@@ -45,79 +61,92 @@
     <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</span><p></p></li>
 </ul>
 </section>
+</div>
 
-<section>
+<div class="container">
 <h2 class="headlines" >Czym się zajmujemy</h2>
-<ul class="images" >
-    <li><img src="./images/Agencja/img1.jpg" 
+<ul class="index-images" >
+    <li clas="index-image">
+    <img src="./images/Agencja/img1.jpg" 
     width="370"
     height="294" 
     alt="telefon i laptop"></li>
 
-    <li><img src="./images/Agencja/img2.jpg"
+    <li clas="index-image">
+    <img src="./images/Agencja/img2.jpg"
     width="370"
     height="294"
     alt="tablet z palętą kolorów"></li>
 
-    <li><img src="./images/Agencja/img3.jpg"
+    <li clas="index-image">
+    <img src="./images/Agencja/img3.jpg"
     width="370"
     height="294"
     alt="laptop z klawiaturą"></li>
 </ul>
 </section>
+</div>
 
-<section class="team-box" >
+<section class="team-box section" >
+    <div class="container">
 <h2 class="headlines" >Nasz zespół</h2>
+
 <ul class="team-images">
-    <Li>
-    <figure>
+    <li class="team-image">
+    <figure class="team-image-display">
    <img src="./images/Agencja/img4.jpg"
    width="270"
    height="260"
    alt="pan w okularach">
-   <figcaption><b>John Doe</b>
+   <figcaption class="JohnDoe"><b>John Doe</b>
     <br><span>Product Designer</span></figcaption>
-   </figure></Li>
+   </figure></li>
 
-   <li>
-    <figure>
+   <li class="team-image">
+    <figure class="team-image-display">
    <img src="./images/Agencja/img5.jpg"
    width="270"
    height="260"
    alt="pani w okularach">
-   <figcaption><b>John Doe</b>
+   <figcaption class="JohnDoe"><b>John Doe</b>
     <br><span>Frontend Developer</span></figcaption>
     </figure></li>
 
-    <li>
-    <figure>
+    <li class="team-image">
+    <figure class="team-image-display">
    <img src="./images/Agencja/img6.jpg"
    width="270"
    height="260"
    alt="uśmiechający się pan">
-   <figcaption><b>John Doe</b>
+   <figcaption class="JohnDoe"><b>John Doe</b>
     <br><span>Marketing</span></figcaption>
     </figure></li>
 
-    <li>
-    <figure>
+    <li class="team-image">
+    <figure class="team-image-display">
    <img src="./images/Agencja/img7.jpg"
    width="270"
    height="260"
    alt="pan w czarnych okularach">
-   <figcaption><b>John Doe</b>
+   <figcaption class="JohnDoe"><b>John Doe</b>
     <br><span>UI Designer</span></figcaption>
     </figure></li>
 </ul>
+    </div>
+
 </section>
 </main>
 <footer>
+    <div class="container">
+        <div class="bottom-logo">
 <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color3">Studio</span></a>
-<address>
+        </div>
+<address class="footer-adress" >
     <span class="adress"> m. Warszawa, Aleje Jerozolimskie 21</span>
     <br><a class="footer-contact" href="mailto:info@example.com">info@example.com</a><br>
     <br><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a><br>
 </address>
+    </div>
 </footer>
 </body>
 </html>
