cant do any better

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,8 @@
 </head>
 
 <body>
-    <header class="container">
+<header>
+    <div class="container">
         <div class="header-container">
         <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color2">Studio</span></a>
         <nav>
@@ -34,6 +35,7 @@
         <a class="contact" href="tel:+48111111111">+48 111 111 111</a>
         </div>
         </div>
+    </div>
     </header>
 
 <div class="container">
