--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="css/positioning.css" />
 </head>
 <body>
-    <header>
     <div class="container">
-        <div class="header-container">
+    <header>
+        <div class="header-space">
         <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color2">Studio</span></a>
             <nav>
                 <menu class="navigations">
@@ -29,24 +29,26 @@
                 <li><a href="/Kontakt">Kontakt</a></li>
                  </menu>
             </nav>
-        <div class="contact-container">
+        <div class="contact-space">
         <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="contact" href="tel:+48111111111">+48 111 111 111</a>
         </div>
         </div>
-    </div>
     </header>
+    </div>
 <main>
-    <div class="container">
     <section class="first-heading-box" >
+    <div class="container">
 <h1 class="main-heading">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
 <div class="service">
 <button type="button" class="service-button">Zamów usługe</button>
 </div>
+</div>
 </section>
-    </div>
-<div class="container">
-<section class="lorem-index">
+
+
+<section class="section">
+    <div class="container">
 <ul class="lorem-ipsum" >
     <li><b>LOREM IPSUM</b>
     <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</span></p></li>
@@ -60,8 +62,9 @@
     <li><b>LOREM IPSUM</b>
     <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</span><p></p></li>
 </ul>
-</section>
 </div>
+</section>
+
 
 <div class="container">
 <h2 class="headlines" >Czym się zajmujemy</h2>
@@ -89,7 +92,7 @@
 
 <section class="team-box section" >
     <div class="container">
-<h2 class="headlines" >Nasz zespół</h2>
+<h2 class="headlines">Nasz zespół</h2>
 
 <ul class="team-images">
     <li class="team-image">
@@ -98,7 +101,7 @@
    width="270"
    height="260"
    alt="pan w okularach">
-   <figcaption class="JohnDoe"><b>John Doe</b>
+   <figcaption class="team-image-description"><b>John Doe</b>
     <br><span>Product Designer</span></figcaption>
    </figure></li>
 
@@ -108,7 +111,7 @@
    width="270"
    height="260"
    alt="pani w okularach">
-   <figcaption class="JohnDoe"><b>John Doe</b>
+   <figcaption class="team-image-description"><b>John Doe</b>
     <br><span>Frontend Developer</span></figcaption>
     </figure></li>
 
@@ -118,7 +121,7 @@
    width="270"
    height="260"
    alt="uśmiechający się pan">
-   <figcaption class="JohnDoe"><b>John Doe</b>
+   <figcaption class="team-image-description"><b>John Doe</b>
     <br><span>Marketing</span></figcaption>
     </figure></li>
 
@@ -128,7 +131,7 @@
    width="270"
    height="260"
    alt="pan w czarnych okularach">
-   <figcaption class="JohnDoe"><b>John Doe</b>
+   <figcaption class="team-image-description"><b>John Doe</b>
     <br><span>UI Designer</span></figcaption>
     </figure></li>
 </ul>
@@ -143,8 +146,8 @@
         </div>
 <address class="footer-adress" >
     <span class="adress"> m. Warszawa, Aleje Jerozolimskie 21</span>
-    <br><a class="footer-contact" href="mailto:info@example.com">info@example.com</a><br>
-    <br><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a><br>
+    <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
+    <a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a>
 </address>
     </div>
 </footer>
