--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,10 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="css/positioning.css" />
 </head>
-
 <body>
-<header>
     <div class="container">
-        <div class="header-container">
+    <header>
+        <div class="header-space">
         <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color2">Studio</span></a>
         <nav>
             <menu class="navigations">
@@ -30,16 +29,17 @@
                 <li><a href="/Kontakt">Kontakt</a></li>
             </menu>
         </nav>
-        <div class="contact-container">
+        <div class="contact-space">
         <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="contact" href="tel:+48111111111">+48 111 111 111</a>
         </div>
         </div>
-    </div>
     </header>
+    </div>
 
-<div class="container">
 <section class="section">
+<div class="container">
+
 <ul class="buttons">
 <li><button type="button" class="button">Wszystkie</button></li>
 <li><button type="button" class="button">Strony</button></li>
@@ -58,7 +58,7 @@
             alt="laptop">
             <figcaption class="image-caption">
             <b>Technocrack</b>
-            <br><span>Strona internetowa</span><br>
+            <span>Strona internetowa</span>
             </figcaption>
         </figure>
     </li>
@@ -70,7 +70,7 @@
             alt="męska koszykówka">
             <figcaption class="image-caption">
                 <b>Grafika New Orlean vs Golden Star</b>
-                <br><span>Dizajn</span><br>
+                <span>Dizajn</span>
             </figcaption>
         </figure>
     </li>
@@ -82,7 +82,7 @@
             alt="logo restauracji">
             <figcaption class="image-caption">
                 <b>Restauracja Seafood</b>
-                <br><span>Aplikacja</span><br>
+                <span>Aplikacja</span>
             </figcaption>
         </figure>
     </li>
@@ -94,7 +94,7 @@
             alt="słuchawki">
             <figcaption class="image-caption">
                 <b>Projekt Prime</b>
-                <br><span>Marketing</span><br>
+                <span>Marketing</span>
             </figcaption>
         </figure>
     </li>
@@ -106,7 +106,7 @@
             alt="Pudełka">
             <figcaption class="image-caption">
                 <b>Projekt Boxes</b>
-                <br><span>Aplikacja</span><br>
+                <span>Aplikacja</span>
             </figcaption>
         </figure>
     </li>
@@ -118,7 +118,7 @@
             alt="Monitor">
             <figcaption class="image-caption">
                 <b>Inspiration has no Borders</b>
-                <br><span>Strona Internetowa</span><br>
+                <span>Strona Internetowa</span>
             </figcaption>
         </figure>
     </li>
@@ -130,7 +130,7 @@
         alt="Książka">
         <figcaption class="image-caption">
             <b>Magazyn Limited Edition</b>
-            <br><span>Dizajn</span><br>
+            <span>Dizajn</span>
         </figcaption>
     </figure>
 </li>
@@ -142,7 +142,7 @@
         alt="Zawieszka z logiem firmy">
         <figcaption class="image-caption">
             <b>Projekt LAB</b>
-            <br><span>Marketing</span><br>
+            <span>Marketing</span>
         </figcaption>
     </figure>
 </li>
@@ -154,20 +154,25 @@
         alt="Praca na laptopie">
         <figcaption class="image-caption">
             <b>Growing Business</b>
-            <br><span>Aplikacja</span><br>
+            <span>Aplikacja</span>
         </figcaption>
     </figure>
 </li>
 </ul>
-</section>
 </div>
+</section>
+
 <footer>
+    <div class="container">
+        <div class="bottom-logo">
     <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color3">Studio</span></a>
+        </div>
     <address>
         <span class="adress"> m. Warszawa, Aleje Jerozolimskie 21</span>
         <br><a class="footer-contact" href="mailto:info@example.com">info@example.com</a><br>
         <br><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a><br>
     </address>
+    </div>
 </footer>
 </body>
 </html>
