--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="css/positioning.css" />
 </head>
 <body>
-    <div class="container">
     <header>
+    <div class="container">
         <div class="header-space">
         <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color2">Studio</span></a>
         <nav>
@@ -34,8 +34,8 @@
         <a class="contact" href="tel:+48111111111">+48 111 111 111</a>
         </div>
         </div>
-    </header>
     </div>
+</header>
 
 <section class="section">
 <div class="container">
@@ -167,10 +167,10 @@
         <div class="bottom-logo">
     <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color3">Studio</span></a>
         </div>
-    <address>
+    <address class="footer-adress">
         <span class="adress"> m. Warszawa, Aleje Jerozolimskie 21</span>
-        <br><a class="footer-contact" href="mailto:info@example.com">info@example.com</a><br>
-        <br><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a><br>
+        <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
+        <a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a>
     </address>
     </div>
 </footer>
