--- a/portfolio.html
+++ b/portfolio.html
@@ -164,9 +164,7 @@
 
 <footer>
     <div class="container">
-        <div class="bottom-logo">
-    <a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color3">Studio</span></a>
-        </div>
+    <a class="bottom-logo" href="index.html"><span class="web-color1">Web</span><span class="web-color3">Studio</span></a>
     <address class="footer-adress">
         <span class="adress"> m. Warszawa, Aleje Jerozolimskie 21</span>
         <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
