--- a/index.html
+++ b/index.html
@@ -141,10 +141,8 @@
 </main>
 
 <footer>
-    <div class="container">
-        <div class="bottom-logo">
-<a class="logo" href="index.html"><span class="web-color1">Web</span><span class="web-color3">Studio</span></a>
-        </div>
+    <div class="container">   
+<a class="bottom-logo" href="index.html"><span class="web-color1">Web</span><span class="web-color3">Studio</span></a>
 <address class="footer-adress">
     <span class="adress"> m. Warszawa, Aleje Jerozolimskie 21</span>
     <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
