--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </div>
     </header>
 <main>
-    <section class="first-heading-box" >
+    <div class="first-heading-box" >
+    <section class="section" >
     <div class="container">
 <h1 class="main-heading">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
 <div class="service">
@@ -45,6 +46,7 @@
 </div>
 </div>
 </section>
+    </div>
 
 
 <section class="section">
@@ -65,7 +67,7 @@
 </div>
 </section>
 
-
+<section class="section">
 <div class="container">
 <h2 class="headlines" >Czym się zajmujemy</h2>
 <ul class="index-images" >
@@ -90,7 +92,8 @@
 </section>
 </div>
 
-<section class="team-box section" >
+<div class="team-box">
+<section class="section">
     <div class="container">
 <h2 class="headlines">Nasz zespół</h2>
 
@@ -138,6 +141,7 @@
     </div>
 
 </section>
+</div>
 </main>
 
 <footer>
