--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </div>
 </section>
 
-<section class="section">
+<section class="what-do-we-do">
 <div class="container">
 <h2 class="headlines" >Czym się zajmujemy</h2>
 <ul class="index-images" >
